--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,2 +1,9 @@
-@import "../../node_modules/materialize-css/sass/materialize.scss";
-@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import "./common.scss";
+
+.nav {
+	padding: 1em 0;
+
+	a {
+		color: black !important;
+	}
+}
