--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -19,7 +19,8 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;
-	margin: 1em 0;
+	margin: 2em 0;
+	min-height: 75vh;
 
 	article {
 		margin: 1em;
@@ -35,23 +36,19 @@
 		section {
 			font-size: 0.9em;
 
-			span {
-				font-size: 1.7em;
+			a {
+				cursor: pointer;
+				font-size: 1.4em;
 				font-weight: 400;
 			}
-		}
-	}
-
-	@include media(tablet_mobile, portrait) {
-		article {
-			margin: 1em;
-			max-width: 15em;
-			min-width: 15em;
 		}
 	}
 }
 
 .search-dropdown {
+	background-color: rgba($color: white, $alpha: 0.9) !important;
+	z-index: 100;
+
 	div {
 		cursor: pointer;
 		margin: 0.5em;
@@ -62,6 +59,16 @@
 
 		&:visited {
 			color: indigo;
+		}
+	}
+}
+
+.footer {
+	a {
+		margin: 0 0.2em;
+
+		img {
+			filter: invert(90%);
 		}
 	}
 }
