[Webpack] Installed webpack with eslint/postcss/sass/stylelint/file/babel/css loader

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -43,5 +43,5 @@ body {
 }
 
 // Materialize & AnimateCSS
-@import "../../node_modules/materialize-css/sass/materialize";
-@import "../../node_modules/animate.css/animate.min.css";
+@import "../../../node_modules/materialize-css/sass/materialize";
+@import "../../../node_modules/animate.css/animate.min.css";
