--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -36,6 +36,17 @@
 	#{&}-span {
 		margin-bottom: 1em;
 	}
+
+	#{&}-rating {
+		width: 75px;
+		height: 75px;
+		margin-bottom: 1em !important;
+		position: relative;
+
+		.progressbar-text {
+			color: white !important;
+		}
+	}
 }
 
 .cardbox {
