--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -53,6 +53,13 @@ body {
 	}
 }
 
+// containers
+.container-xl {
+	margin: 0 auto;
+	max-width: 1280px;
+	width: 90%;
+}
+
 // scrollbar
 ::-webkit-scrollbar {
 	width: 12px;
