--- a/src/assets/scss/movie.scss
+++ b/src/assets/scss/movie.scss
@@ -96,6 +96,11 @@
 
 			.card-image {
 				border-radius: 1em !important;
+
+				img {
+					width: 150px !important;
+					height: 225px !important;
+				}
 			}
 		}
 	}
