--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,3 +1,88 @@
 @import "./common";
 @import "./navbar";
 @import "./footer";
+
+.upcoming {
+	margin: 3em 0;
+	padding: 3em 0;
+
+	.carousel {
+		&::before {
+			z-index: -100;
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			background-image: url("https://www.themoviedb.org/assets/2/v4/misc/trending-bg-39afc2a5f77e31d469b25c187814c0a2efef225494c038098d62317d923f8415.svg");
+			background-size: cover;
+			background-repeat: no-repeat;
+			filter: hue-rotate(100deg) opacity(0.6);
+		}
+	}
+}
+
+.trending {
+	margin: 3em 0;
+	padding: 3em 0;
+
+	.carousel {
+		&::before {
+			z-index: -100;
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			background-image: url("https://www.themoviedb.org/assets/2/v4/account_pipes/red-b64316df5633aa0687196d10fa429418035b55122c0b5726082669b9748a0e2a.svg");
+			background-size: cover;
+			background-repeat: no-repeat;
+			filter: hue-rotate(280deg);
+		}
+	}
+}
+
+.carousel {
+	img, a {
+		user-select: none;
+	}
+
+	img {
+		width: 200px !important;
+		height: 300px !important;
+	}
+}
+
+.plx {	
+	#{&}-bg {
+		img {
+			z-index: -100;
+			height: 200% !important;
+			filter: contrast(160%);
+		}
+
+		&::before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			background: linear-gradient(to bottom right, rgba(0, 152, 184, 1), rgba(108, 0, 112, 1));
+			opacity: 0.4;
+		}
+	}
+
+	#{&}-header {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 100%;
+	
+		h2 {
+			margin: 0;
+		}
+	}
+}
